[tool.poetry]
name = "color-puzzle-solver"
version = "0.1.0"
description = ""
authors = ["Aqdas Ahmad Khan <aqdasak@gmail.com>"]
readme = "README.md"
packages = [{include = "color_puzzle_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
